# simpleGC

./: CMakeLists.txt  Readme.md  readme.md  sgc_iterator.cpp  sgc_iterator.h  sgc_ptr.cpp  sgc_ptr.h
src/: CMakeLists.txt  sgc_info.cpp  sgc_info.h  sgc_iterator.h  sgc_ptr.cpp  sgc_ptr.h
